--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.16"
+    "@tailwindcss/cli": "^4.1.16" 
   },
   "scripts": {
-    "build": "npx tailwindcss -i ./input.css -o ./static/css/styles.css --minify",
-    "watch:css": "npx @tailwindcss/cli -i ./static/src/styles.css -o ./static/dist/styles.css --watch"
+    "build": "npx tailwindcss -i ./static/src/styles.css -o ./static/dist/styles.css --minify",
+    
+    "watch:css": "npx tailwindcss -i ./static/src/styles.css -o ./static/dist/styles.css --watch"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
